tests/ui/feature-gates/feature-gate-custom_attribute2.stderr
error: cannot find attribute `lt_struct` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:4:15
   |
LL | struct StLt<#[lt_struct] 'a>(&'a u32);
   |               ^^^^^^^^^ not found in the crate root

error: cannot find attribute `ty_struct` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:6:15
   |
LL | struct StTy<#[ty_struct] I>(I);
   |               ^^^^^^^^^ not found in the crate root

error: cannot find attribute `lt_enum` in enum `EnLt`
  --> $DIR/feature-gate-custom_attribute2.rs:9:13
   |
LL | enum EnLt<#[lt_enum] 'b> { A(&'b u32), B }
   |             ^^^^^^^ not found in enum `EnLt`

error: cannot find attribute `ty_enum` in enum `EnTy`
  --> $DIR/feature-gate-custom_attribute2.rs:11:13
   |
LL | enum EnTy<#[ty_enum] J> { A(J), B }
   |             ^^^^^^^ not found in enum `EnTy`

error: cannot find attribute `lt_trait` in trait `TrLt`
  --> $DIR/feature-gate-custom_attribute2.rs:14:14
   |
LL | trait TrLt<#[lt_trait] 'c> { fn foo(&self, _: &'c [u32]) -> &'c u32; }
   |              ^^^^^^^^ not found in trait `TrLt`

error: cannot find attribute `ty_trait` in trait `TrTy`
  --> $DIR/feature-gate-custom_attribute2.rs:16:14
   |
LL | trait TrTy<#[ty_trait] K> { fn foo(&self, _: K); }
   |              ^^^^^^^^ not found in trait `TrTy`

error: cannot find attribute `lt_type` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:19:13
   |
LL | type TyLt<#[lt_type] 'd> = &'d u32;
   |             ^^^^^^^ not found in the crate root

error: cannot find attribute `ty_type` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:21:13
   |
LL | type TyTy<#[ty_type] L> = (L, );
   |             ^^^^^^^ not found in the crate root

error: cannot find attribute `lt_inherent` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:24:8
   |
LL | impl<#[lt_inherent] 'e> StLt<'e> { }
   |        ^^^^^^^^^^^ not found in the crate root

error: cannot find attribute `ty_inherent` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:26:8
   |
LL | impl<#[ty_inherent] M> StTy<M> { }
   |        ^^^^^^^^^^^ not found in the crate root

error: cannot find attribute `lt_impl_for` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:29:8
   |
LL | impl<#[lt_impl_for] 'f> TrLt<'f> for StLt<'f> {
   |        ^^^^^^^^^^^ not found in the crate root

error: cannot find attribute `ty_impl_for` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:33:8
   |
LL | impl<#[ty_impl_for] N> TrTy<N> for StTy<N> {
   |        ^^^^^^^^^^^ not found in the crate root

error: cannot find attribute `lt_fn` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:38:11
   |
LL | fn f_lt<#[lt_fn] 'g>(_: &'g [u32]) -> &'g u32 { loop { } }
   |           ^^^^^ not found in the crate root

error: cannot find attribute `ty_fn` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:40:11
   |
LL | fn f_ty<#[ty_fn] O>(_: O) { }
   |           ^^^^^ not found in the crate root

error: cannot find attribute `lt_meth` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:44:15
   |
LL |     fn m_lt<#[lt_meth] 'h>(_: &'h [u32]) -> &'h u32 { loop { } }
   |               ^^^^^^^ not found in the crate root

error: cannot find attribute `ty_meth` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:46:15
   |
LL |     fn m_ty<#[ty_meth] P>(_: P) { }
   |               ^^^^^^^ not found in the crate root

error: cannot find attribute `lt_hof` in the crate root
  --> $DIR/feature-gate-custom_attribute2.rs:51:21
   |
LL |     where Q: for <#[lt_hof] 'i> Fn(&'i [u32]) -> &'i u32
   |                     ^^^^^^ not found in the crate root

error: aborting due to 17 previous errors

